chore: bump v8, clean data

--- a/index.html
+++ b/index.html
@@ -1,50 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>TATARÇA • җанлы сүзләр</title>
-  <link rel="manifest" href="./manifest.webmanifest?v=7">
-  <link rel="stylesheet" href="./styles.css?v=7">
-  <meta name="theme-color" content="#5f51d8">
+
+  <link rel="manifest" href="./manifest.webmanifest?v=9">
+  <meta name="theme-color" content="#5f4bc6">
+  <link rel="apple-touch-icon" href="./icons/icon-192.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles.css?v=9">
 </head>
 <body>
-  <header class="container">
+  <header class="container header">
     <h1>TATARÇA • җанлы сүзләр</h1>
-    <nav class="tabs">
-      <button data-tab="phrases" class="tab is-active">ФРАЗА</button>
-      <button data-tab="proverbs" class="tab">ПОСЛОВИЦА</button>
-      <button data-tab="facts" class="tab">ФАКТ</button>
+    <nav class="segmented" role="tablist" aria-label="Категории">
+      <button class="segmented__btn is-active" role="tab" aria-selected="true" data-tab="phrases">ФРАЗА</button>
+      <button class="segmented__btn" role="tab" aria-selected="false" data-tab="proverbs">ПОСЛОВИЦА</button>
+      <button class="segmented__btn" role="tab" aria-selected="false" data-tab="facts">ФАКТ</button>
     </nav>
   </header>
 
   <main class="container">
-    <section class="card">
-      <span class="badge">Татарча</span>
-      <h2 id="tt"></h2>
-      <p class="tr" id="tr"></p>
-      <p class="ru" id="ru"></p>
+    <!-- карточка -->
+    <section class="card" aria-live="polite">
+      <div class="card__badge">Татарча</div>
+      <h2 id="tt" class="card__title">Сәлам!</h2>
+      <p id="tr" class="card__tr">[Sälam!]</p>
+      <p id="ru" class="card__ru">Привет!</p>
 
-      <div class="actions">
-        <button id="copyBtn">Скопировать</button>
-        <button id="shareBtn">Поделиться</button>
+      <div class="row gap mt">
+        <button id="copyBtn" class="btn outline">Скопировать</button>
+        <button id="shareBtn" class="btn outline">Поделиться</button>
+        <button id="speakBtn" class="btn outline" aria-label="Озвучить">🔊 Озвучить</button>
+        <button id="handBtn" class="btn outline">Режим письма</button>
       </div>
 
-      <div class="progress"><span id="bar"></span></div>
+      <div class="bar">
+        <div id="bar" class="bar__fill" style="width: 35%"></div>
+      </div>
+
+      <!-- handwriting -->
+      <div id="padBox" hidden>
+        <canvas id="pad" width="1200" height="600" aria-label="Поле письма"></canvas>
+        <div class="row gap">
+          <button id="padClear" class="btn outline">Очистить</button>
+          <button id="padHide" class="btn outline">Скрыть</button>
+          <button id="padSave" class="btn outline">Сохранить PNG</button>
+        </div>
+      </div>
     </section>
 
-    <button id="nextBtn" class="cta">Ещё вариант</button>
+    <button id="nextBtn" class="btn primary wide">Ещё вариант</button>
 
-    <footer class="muted">
-      • Татарские фразы, пословицы и факты •
-    </footer>
+    <p class="muted small mt2">• Татарские фразы, пословицы и факты •</p>
   </main>
 
-  <script type="module" src="./app.js?v=7"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js?v=7');
-    }
-  </script>
+  <script type="module" src="./app.js?v=9"></script>
 </body>
 </html>
